--- a/src/plugins/core/midi/prefs/html/panel.html
+++ b/src/plugins/core/midi/prefs/html/panel.html
@@ -195,12 +195,6 @@
 		}
 	}
 
-
-
-
-
-
-	/* UPDATED CODE: */
 	function updateUI() {
 		try {
 			var result = {
@@ -232,16 +226,6 @@
 		} catch(err) {
 			alertErrorMessage(err);
 		}
-	}
-
-	function highlightRowRed(buttonID) {
-		document.getElementById("row" + buttonID).style.backgroundColor = "#cc5e53";
-        document.getElementById("row" + buttonID).style.setProperty("-webkit-transition", "background-color 1s");
-	}
-
-	function unhighlightRowRed(buttonID) {
-		document.getElementById("row" + buttonID).style.backgroundColor = "";
-        document.getElementById("row" + buttonID).style.setProperty("-webkit-transition", "background-color 0s");
 	}
 
 	function changeScrollAreaPosition() {
@@ -280,7 +264,59 @@
 		}
 	}
 
+
+	function clickButton(callbackType) {
+		try {
+			var result = {
+				id: "midiPanelCallback",
+				params: {
+					type: callbackType,
+					application: document.getElementById("application").value,
+					bank: document.getElementById("bank").value,
+				},
+			}
+			postMessage(result);
+		} catch(err) {
+			alertErrorMessage(err);
+		}
+	}
+
+	function changeIgnore() {
+		try {
+			var result = {
+				id: "midiPanelCallback",
+				params: {
+					type: "changeIgnore",
+					application: document.getElementById("application").value,
+					ignore: document.getElementById("ignore").checked,
+				},
+			}
+			postMessage(result);
+		} catch(err) {
+			alertErrorMessage(err);
+		}
+	}
+
 </script>
+
+<table>
+	<thead>
+		<tr>
+			<th style="padding-left: 20px;">
+				<a class="button importSettings" href="#" style="font-weight: normal;" onclick="clickButton('importSettings')">{{ i18n("importSettings") }}</a>
+			</th>
+			<th style="padding-left: 10px;">
+				<a class="button importSettings" href="#" style="font-weight: normal;" onclick="clickButton('exportSettings')">{{ i18n("exportSettings") }}</a>
+			</th>
+			<th style="padding-left: 10px;">
+				<a class="button importSettings" href="#" style="font-weight: normal;" onclick="clickButton('openAudioMIDISetup')">{{ i18n("openAudioMIDISetup") }}</a>
+			</th>
+
+		</tr>
+	</thead>
+</table>
+<hr />
+
 <table style="text-align: left; vertical-align: text-bottom;">
 	<tr>
 		<th style="width: 10px;"></th>
@@ -435,6 +471,38 @@ end
 		</tbody>
 	</table>
 </div>
+
+<table>
+	<tr>
+		<th style="height: 10px;"></th>
+	</tr>
+	<tr>
+		<th style="width: 10px;"></th>
+		<th>
+			<a href="#" class="bottomButton" onclick="clickButton('applyTopDeviceToAll')">{{ i18n("applyTopDeviceToAll") }}</a>
+		</th>
+
+		<th>
+			<a href="#" class="bottomButton" onclick="clickButton('resetEverything')">{{ i18n("resetEverything") }}</a>
+		</th>
+		<th>
+			<a href="#" class="bottomButton" onclick="clickButton('resetApplication')">{{ i18n("resetApplication") }}</a>
+		</th>
+		<th>
+			<a href="#" class="bottomButton" onclick="clickButton('resetBank')">{{ i18n("resetBank") }}</a>
+		</th>
+	</tr>
+	<tr>
+		<th style="width: 10px;"></th>
+		<th>
+			<a href="#" class="bottomButton" onclick="clickButton('copyApplication')">{{ i18n("copyApplication") }}</a>
+		</th>
+		<th>
+			<a href="#" class="bottomButton" onclick="clickButton('copyBank')">{{ i18n("copyBank") }}</a>
+		</th>
+	</tr>
+</table>
+
 <script>
 	// Update UI on initial load:
 	updateUI();
