--- a/src/plugins/core/midi/prefs/html/panel.html
+++ b/src/plugins/core/midi/prefs/html/panel.html
@@ -238,7 +238,7 @@
 						type: "scrollBarPosition",
 						application: document.getElementById("application").value,
 						bank: document.getElementById("bank").value,
-						position: element.scrollTop,
+						value: element.scrollTop,
 					},
 				}
 				postMessage(result);
