Work in progress
- Added release actions for Loupedeck buttons.
- Added ability to trigger custom vibrations on Loupedeck button
releases and knob/jog wheel turns.
- Fixed missing side screen labels on Loupedeck CT preferences.
- Fixed: Loupedeck CT pixel buffer format is 5-6-5, not 5-3-5.
- Add support for Loupedeck CT wheel sensitivity.
- Added “Open Key Creator” and “Buy More Icons” buttons to Loupedeck CT
Preferences panel.
- Cleaned up `cp.apple.finalcutpro.main.PrimaryWindow`
- Added Skype Application Manager.
- Added Microsoft Teams Application Manager.
- Closes #2371
- Closes #2369
- Closes #2375

--- a/src/plugins/core/streamdeck/prefs/html/panel.html
+++ b/src/plugins/core/streamdeck/prefs/html/panel.html
@@ -203,10 +203,10 @@
 			<a href="#" class="bottomButton" onclick="clickButton('exportSettings')">{{ i18n("exportSettings") }}</a>
 		</th>
 		<th>
-			<a href="#" class="bottomButton" onclick="clickButton('openKeyCreator')">Open Key Creator</a>
+			<a href="#" class="bottomButton" onclick="clickButton('openKeyCreator')">{{ i18n("openKeyCreator") }}</a>
 		</th>
 		<th>
-			<a href="#" class="bottomButton" onclick="clickButton('buyIcons')">Buy More Icons</a>
+			<a href="#" class="bottomButton" onclick="clickButton('buyIcons')">{{ i18n("buyMoreIcons") }}</a>
 		</th>
 	</tr>
 </table>
