Work in progress
- Fixed bug where "Copy Control to All Banks" didn’t update knob text
labels.
- Added actions for manually changing applications on the Loupedeck CT,
as well as changing and launching applications.
- Added support for changing Loupedeck CT backlight levels.
- Added Applications Managers for Disk Utility, System Preferences,
TextEdit and Zoom.
- Closes #2367
- Closes #2349
- Closes #2280
- Closes #1848
- Closes #2378

--- a/src/plugins/core/loupedeckct/prefs/html/panel.html
+++ b/src/plugins/core/loupedeckct/prefs/html/panel.html
@@ -739,12 +739,12 @@
 		}
 	}
 
-	function buyIcons() {
+	function buyMoreIcons() {
 		try {
 			var result = {
 				id: "loupedeckCTPanelCallback",
 				params: {
-					type: "buyIcons",
+					type: "buyMoreIcons",
 				},
 			}
 			postMessage(result);
@@ -1070,14 +1070,16 @@
 					{%
 					local atLeastOne = false
 					for id, label in spairs(userApps, function(t,a,b) return t[a] < t[b] end) do
-						atLeastOne = true
-						local selected = ""
-						if lastApplication == id then
-							selected = [[selected=""]]
-						end
+						if id ~= "All Applications" then
+							atLeastOne = true
+							local selected = ""
+							if lastApplication == id then
+								selected = [[selected=""]]
+							end
 					%}
 					<option {{selected}} value="{{id}}">{{label}}</option>
 					{%
+						end
 					end
 					if atLeastOne then
 					%}
