Work in progress
- Added ability to remove Custom Applications from Tangent Preferences

--- a/src/plugins/core/tangent/prefs/html/panel.html
+++ b/src/plugins/core/tangent/prefs/html/panel.html
@@ -91,7 +91,8 @@
 				end
 				%}
 				<option disabled>──────────</option>
-				<option value="Add Application">{{ i18n("addApplication") }}</option>
+				<option id="addApplication" value="Add Application">{{ i18n("addApplication") }}</option>
+				<option id="removeApplication" value="Remove Application">{{ i18n("removeApplication") }}</option>
 			</select>
 		</th>
 		<th style="width: 20px;"></th>
